# QIndustrialCommunication

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_zh.md
QICDemo/: CMakeLists.txt  Demo.cpp
QIndustrialCommunication/: ByteConverterBase.h  ByteConverterHelper.h  BytesOrderBase.h  BytesOrderConverter.h  CMakeLists.txt  ConverterBase.h  DataFormat.cpp  DataFormat.h  Demo.cpp  DeviceBase.h  EthernetDevice.h  GetResultHelper.h  IEthernetIO.h  KeyenceNanoSerialOverTcp.cpp  KeyenceNanoSerialOverTcp.h  NetworkBase.h  NetworkDevice.h  NetworkDeviceBase.h  QICConfig.cmake  QICConfig.cmake.in  QICResult.h  QICResultTranslator.h  QICTargets.cmake  README.md
QIndustrialCommunication/Core/: BytesOrderBase.h  DataFormat.h  EthernetDevice.h  IEthernetIO.h  QICResult.h
QIndustrialCommunication/Keyence/: KeyenceNanoSerialOverTcp.cpp  KeyenceNanoSerialOverTcp.h
QIndustrialCommunication/Misc/: BytesOrderConverter.h  BytesOrderHelper.h
QIndustrialCommunication/Modbus/: ModbusAddress.h  ModbusDataType.h  ModbusTcpNet.cpp  ModbusTcpNet.h  README.md
QIndustrialCommunication/Siemens/: S7Address.h  S7Message.h  SiemensPLCS.h  SiemensS7Net.cpp  SiemensS7Net.h
